--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   dio: ^5.8.0+1
   flutter_secure_storage: ^9.2.4
   carousel_slider: ^5.1.1
+  flutter_widget_from_html: ^0.16.1
 
 dev_dependencies:
   flutter_test:
